Fix cropped icons

--- a/client/apps/remolacha.Taskbar/src/assets/sass/index.sass
+++ b/client/apps/remolacha.Taskbar/src/assets/sass/index.sass
@@ -35,6 +35,10 @@
                 > span
                     display: inline
                     vertical-align: middle
+                    margin-left: 0
+
+                    > span
+                        vertical-align: middle
     
 .remolacha_app_Taskbar_startMenuItem
     min-height: 48px
